docs: add api docs for save participants answers
